test/libsolidity/syntaxTests/types/var_empty_decl_2.sol
contract C {
    function f() public pure {
        var (b, c);
        b.WeMustNotReachHere();
        c.FailsToLookupToo();
    }
}
// ----
// ParserError 6933: (52-55): Expected primary expression.
